--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -1,10 +1,13 @@
 <!DOCTYPE HTML>
+<!--thymelaf를 사용하기 위한 선언 th를 사용할때 thymelaf 의 템플릿 엔진을 사용할 수 있다.-->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+<!--이 페이지는 localhost:8080/hello로 접속시 보여지는 화면 -->
+<!--${data}에서는 HelloController.java에서 선언해준 Hello!가 출력된다.-->
 <p th:text="'안녕하세요.' + ${data}" >안녕하세요 손님</p>
 </body>
 </html>
